--- a/程式碼/0617/2.實例-html轉為jsx/src/App.css
+++ b/程式碼/0617/2.實例-html轉為jsx/src/App.css
@@ -1,8 +1,8 @@
-body {
+#root {
   background: #ddd;
   min-height: 100vh;
   vertical-align: middle;
-  /* display: flex; */
+  display: flex;
   font-family: sans-serif;
   font-size: 0.8rem;
   font-weight: bold;
